hw05/Solutions/hw05/yDFA.output
Grammar

    0 $accept: line $end

    1 line: A0 '\n'
    2     | error '\n'
    3     | line A0 '\n'

    4 A0: aletter A1
    5   | bletter A4

    6 A1: aletter A1
    7   | bletter A2

    8 A2: aletter A3
    9   | bletter A5

   10 A3: aletter A1
   11   | bletter A2
   12   | /* empty */

   13 A4: aletter A1
   14   | bletter A2

   15 A5: aletter A3
   16   | bletter A5
   17   | /* empty */

   18 aletter: 'a'

   19 bletter: 'b'


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 1 2 3
'a' (97) 18
'b' (98) 19
error (256) 2


Nonterminals, with rules where they appear

$accept (6)
    on left: 0
line (7)
    on left: 1 2 3, on right: 0 3
A0 (8)
    on left: 4 5, on right: 1 3
A1 (9)
    on left: 6 7, on right: 4 6 10 13
A2 (10)
    on left: 8 9, on right: 7 11 14
A3 (11)
    on left: 10 11 12, on right: 8 15
A4 (12)
    on left: 13 14, on right: 5
A5 (13)
    on left: 15 16 17, on right: 9 16
aletter (14)
    on left: 18, on right: 4 6 8 10 13 15
bletter (15)
    on left: 19, on right: 5 7 9 11 14 16


state 0

    0 $accept: . line $end

    error  shift, and go to state 1
    'a'    shift, and go to state 2
    'b'    shift, and go to state 3

    line     go to state 4
    A0       go to state 5
    aletter  go to state 6
    bletter  go to state 7


state 1

    2 line: error . '\n'

    '\n'  shift, and go to state 8


state 2

   18 aletter: 'a' .

    $default  reduce using rule 18 (aletter)


state 3

   19 bletter: 'b' .

    $default  reduce using rule 19 (bletter)


state 4

    0 $accept: line . $end
    3 line: line . A0 '\n'

    $end  shift, and go to state 9
    'a'   shift, and go to state 2
    'b'   shift, and go to state 3

    A0       go to state 10
    aletter  go to state 6
    bletter  go to state 7


state 5

    1 line: A0 . '\n'

    '\n'  shift, and go to state 11


state 6

    4 A0: aletter . A1

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    A1       go to state 12
    aletter  go to state 13
    bletter  go to state 14


state 7

    5 A0: bletter . A4

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    A4       go to state 15
    aletter  go to state 16
    bletter  go to state 17


state 8

    2 line: error '\n' .

    $default  reduce using rule 2 (line)


state 9

    0 $accept: line $end .

    $default  accept


state 10

    3 line: line A0 . '\n'

    '\n'  shift, and go to state 18


state 11

    1 line: A0 '\n' .

    $default  reduce using rule 1 (line)


state 12

    4 A0: aletter A1 .

    $default  reduce using rule 4 (A0)


state 13

    6 A1: aletter . A1

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    A1       go to state 19
    aletter  go to state 13
    bletter  go to state 14


state 14

    7 A1: bletter . A2

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    A2       go to state 20
    aletter  go to state 21
    bletter  go to state 22


state 15

    5 A0: bletter A4 .

    $default  reduce using rule 5 (A0)


state 16

   13 A4: aletter . A1

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    A1       go to state 23
    aletter  go to state 13
    bletter  go to state 14


state 17

   14 A4: bletter . A2

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    A2       go to state 24
    aletter  go to state 21
    bletter  go to state 22


state 18

    3 line: line A0 '\n' .

    $default  reduce using rule 3 (line)


state 19

    6 A1: aletter A1 .

    $default  reduce using rule 6 (A1)


state 20

    7 A1: bletter A2 .

    $default  reduce using rule 7 (A1)


state 21

    8 A2: aletter . A3

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    $default  reduce using rule 12 (A3)

    A3       go to state 25
    aletter  go to state 26
    bletter  go to state 27


state 22

    9 A2: bletter . A5

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    $default  reduce using rule 17 (A5)

    A5       go to state 28
    aletter  go to state 29
    bletter  go to state 30


state 23

   13 A4: aletter A1 .

    $default  reduce using rule 13 (A4)


state 24

   14 A4: bletter A2 .

    $default  reduce using rule 14 (A4)


state 25

    8 A2: aletter A3 .

    $default  reduce using rule 8 (A2)


state 26

   10 A3: aletter . A1

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    A1       go to state 31
    aletter  go to state 13
    bletter  go to state 14


state 27

   11 A3: bletter . A2

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    A2       go to state 32
    aletter  go to state 21
    bletter  go to state 22


state 28

    9 A2: bletter A5 .

    $default  reduce using rule 9 (A2)


state 29

   15 A5: aletter . A3

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    $default  reduce using rule 12 (A3)

    A3       go to state 33
    aletter  go to state 26
    bletter  go to state 27


state 30

   16 A5: bletter . A5

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    $default  reduce using rule 17 (A5)

    A5       go to state 34
    aletter  go to state 29
    bletter  go to state 30


state 31

   10 A3: aletter A1 .

    $default  reduce using rule 10 (A3)


state 32

   11 A3: bletter A2 .

    $default  reduce using rule 11 (A3)


state 33

   15 A5: aletter A3 .

    $default  reduce using rule 15 (A5)


state 34

   16 A5: bletter A5 .

    $default  reduce using rule 16 (A5)
